# Echo-System

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
include/echo/: Application.h  AssetManager.h  AssetPanel.h  Components.h  Entity.h  PropertiesPanel.h  Scene.h  SceneHierarchyPanel.h  SceneSerializer.h  TilemapEditor.h
src/: main.cpp
src/core/: Application.cpp  AssetManager.cpp  Scene.cpp  SceneSerializer.cpp
src/editor/: AssetPanel.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  TilemapEditor.cpp
